<resources>
    <string name="app_name">TimeCrafters Configuration Tool</string>
    <string name="title_editor">Editor</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>
    <string name="title_tacnet">TACNET</string>
    <string name="title_tacnet_connection_status">TACNET Connection Status</string>
    <string name="title_tacnet_server_status">TACNET Server Status</string>

    <string name="tacnet_hostname">Hostname</string>
    <string name="tacnet_port">Port</string>
    <string name="tacnet_connect">Connect</string>
    <string name="tacnet_server">Server</string>
    <string name="tacnet_start_server">Start Server</string>

    <string name="navbar_tacnet_description">Manage network connection</string>
    <string name="navbar_editor_description">Edit configuration</string>
    <string name="navbar_settings_description">Manage presets and configuration files</string>
    <string name="navbar_search_description">Search for groups and actions</string>

    <string name="settings_manage_presets">Manage Presets</string>
    <string name="settings_manage_configurations">Manage Configurations</string>

    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="actions">Actions</string>

    <string name="dialog_close">Close</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_update">Update</string>

    <string name="variable_name">Name</string>
    <string name="variable_type">Type</string>
    <string name="variable_value">Value</string>
    <string name="comment">Comment</string>
    <string name="warning_no_config_active">No active configuration set</string>
    <string name="tacnet_stop_server">Stop Server</string>
    <string name="tacnet_server_status">Server Status</string>
    <string name="tacnet_disconnect">Disconnect</string>
    <string name="tacnet_connected">Connected</string>
    <string name="tacnet_connecting">Connecting...</string>
    <string name="tacnet_not_connected">Not Connected</string>
    <string name="clone">Clone</string>
    <string name="save_as_preset">Save as preset</string>
    <string name="add_from_preset">Add from preset</string>
    <string name="add_variable">Add Variable</string>
    <string name="variables">Variables</string>
    <string name="settings_disable_launcher_delay">Disable Launcher Delay</string>
    <string name="settings_start_server_at_boot">Start Server At Boot</string>
    <string name="settings_show_navigation_labels">Show Navigation Labels</string>
</resources>